fixed margin-top cutoff

--- a/client/src/pages/landingpage/LandingPage.css
+++ b/client/src/pages/landingpage/LandingPage.css
@@ -49,13 +49,6 @@ img {
   }
 }
 
-.content-wrapper {
-  max-width: 1440px;
-  max-height: 900px;
-  display: flex;
-  justify-content: space-between;
-}
-
 .text-container {
   margin-top: 10.1%;
   margin-left: 10.7%;
@@ -64,7 +57,7 @@ img {
 @media (max-width: 1024px) {
   .text-container {
     text-align: center;
-    margin: 5% 15% 5% 15%;
+    margin: 30% 15% 5% 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
